Fixed pagination bugs [next tile on last page and weird grid sizes on next or prev call] and changed text from h2 to a p to make it less likely to overflow

--- a/public/starter-template.css
+++ b/public/starter-template.css
@@ -43,6 +43,8 @@ body, html, .eminem-wraps {
 
 .center-title {
     text-align: center;
+    font-weight: bold;
+    overflow: hidden;
 }
 
 .selected {
